--- a/README.pod
+++ b/README.pod
@@ -1,14 +1,17 @@
 =head1 NAME
 
-ShipIt::Step::Copy -
+ShipIt::Step::Copy - provide simple copy step for module distribution to ShipIt.
 
 =head1 SYNOPSIS
 
-  use ShipIt::Step::Copy;
+  # in your .shipit
+  steps = ..., Copy
+  copy.dir = ~/Dropbox/Public/My-Module
 
 =head1 DESCRIPTION
 
-ShipIt::Step::Copy is
+ShipIt::Step::Copy provides simple copy step to ShipIt. This is useful for backup to another disk or ship to public using DropBox(this usage is shown in SYNOPSIS).
+It is useful for modules you don't want to upload CPAN.
 
 =head1 AUTHOR
 
